--- a/creativemind.html
+++ b/creativemind.html
@@ -10,6 +10,9 @@
 <body>
     <header>
         <nav>
+            <div>
+                <img src="logo.jpg" alt="LOGO" class="compact-image">
+            </div>
             <div class="logo">Creative Minds</div>
             <ul>
                 <li><a href="#services">Services</a></li>
