--- a/creativemind.html
+++ b/creativemind.html
@@ -47,26 +47,32 @@
     </section>
 
 
-    <section id="team">
-        <h2>Meet the Team</h2>
-        <div class="team-grid">
-            <div class="team-member">
-                <img src="team1.jpg" alt="John Doe">
-                <h3>John Doe</h3>
-                <p>Lead Designer</p>
-            </div>
-            <div class="team-member">
-                <img src="team2.jpg" alt="Jane Smith">
-                <h3>Jane Smith</h3>
-                <p>UX Specialist</p>
-            </div>
-            <div class="team-member">
-                <img src="team3.jpg" alt="Emily Johnson">
-                <h3>Emily Johnson</h3>
-                <p>Graphic Designer</p>
-            </div>
+<section id="team">
+    <h2>Meet the Team</h2>
+    <div class="team-grid">
+        <div class="team-member">
+            <img src="team1.jpg" alt="Ahmed Khan">
+            <h3>Ahmed Khan</h3>
+            <p>Creative Director</p>
         </div>
-    </section>
+        <div class="team-member">
+            <img src="team2.jpg" alt="Sara Ali">
+            <h3>Sara Ali</h3>
+            <p>UX/UI Designer</p>
+        </div>
+        <div class="team-member">
+            <img src="team3.jpg" alt="Bilal Hussain">
+            <h3>Bilal Hussain</h3>
+            <p>Web Developer</p>
+        </div>
+        <div class="team-member">
+            <img src="team4.jpg" alt="Zara Sheikh">
+            <h3>Zara Sheikh</h3>
+            <p>Marketing Strategist</p>
+        </div>
+    </div>
+</section>
+
 
     <section id="contact">
         <h2>Contact Us</h2>
