--- a/creativemind.html
+++ b/creativemind.html
@@ -51,27 +51,28 @@
     <h2>Meet the Team</h2>
     <div class="team-grid">
         <div class="team-member">
-            <img src="team1.jpg" alt="Ahmed Khan">
+            <img src="assets/ahmad.jpg" alt="Ahmed Khan">
             <h3>Ahmed Khan</h3>
             <p>Creative Director</p>
         </div>
         <div class="team-member">
-            <img src="team2.jpg" alt="Sara Ali">
+            <img src="assets/sara.jpg" alt="Sara Ali">
             <h3>Sara Ali</h3>
             <p>UX/UI Designer</p>
         </div>
         <div class="team-member">
-            <img src="team3.jpg" alt="Bilal Hussain">
+            <img src="assets/bilal.jpg" alt="Bilal Hussain">
             <h3>Bilal Hussain</h3>
             <p>Web Developer</p>
         </div>
         <div class="team-member">
-            <img src="team4.jpg" alt="Zara Sheikh">
+            <img src="assets/zara.jpg" alt="Zara Sheikh">
             <h3>Zara Sheikh</h3>
             <p>Marketing Strategist</p>
         </div>
     </div>
 </section>
+
 
 
     <section id="contact">
