--- a/creativemind.html
+++ b/creativemind.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Creative Minds - A design agency crafting digital experiences.">
     <title>Creative Minds - Design Agency</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <link rel="stylesheet" href="styles.css">
+	
 </head>
 <body>
     <header>
@@ -87,5 +90,16 @@
 </section>
 
 
-    <footer>
-        <p>&copy; 2024 Creative Minds. All rights
+   <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Creative Minds. All rights reserved.</p>
+            <ul class="socials">
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li> <!-- Facebook -->
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>    <!-- Twitter -->
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>  <!-- Instagram -->
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li> <!-- LinkedIn -->
+            </ul>
+        </div>
+    </footer>
+</body>
+</html>
