--- a/creativemind.html
+++ b/creativemind.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div>
-                <img src="logo.jpg" alt="LOGO" class="compact-image">
+                <img src="assets/logo.jpg" alt="LOGO" class="compact-image">
             </div>
             <div class="logo">Creative Minds</div>
             <ul>
