Add images to services section

--- a/creativemind.html
+++ b/creativemind.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div>
-                <img src="assets/logo3.jpg" alt="LOGO" class="compact-image">
+                <img src="assets/logo.jpg" alt="LOGO" class="compact-image">
             </div>
             <div class="logo">Creative Minds</div>
             <ul>
@@ -34,15 +34,19 @@
     <section id="services">
         <h2>Our Services</h2>
         <div class="service-list">
+            
             <div class="service">
+                <img src="assets/web.jpg" alt="LOGO" class="service-logo">
                 <h3>Web Design</h3>
                 <p>We create beautiful, responsive websites that bring your brand to life.</p>
             </div>
             <div class="service">
+                <img src="assets/graphic.jpeg" alt="LOGO" class="service-logo">
                 <h3>Graphic Design</h3>
                 <p>From logos to brand identity, we deliver impactful graphic design solutions.</p>
             </div>
             <div class="service">
+                <img src="assets/uiux.jpg" alt="LOGO" class="service-logo">
                 <h3>UI/UX Design</h3>
                 <p>User-focused design that provides an exceptional digital experience.</p>
             </div>
