Add hero background image

--- a/creativemind.html
+++ b/creativemind.html
@@ -26,7 +26,13 @@
     <section id="hero">
         <div class="hero-content">
             <h1>Crafting Digital Experiences</h1>
-            <p>We are Creative Minds, a design agency that turns your ideas into reality.</p>
+            <p>
+                We are Creative Minds, a design agency that turns your ideas into reality. 
+                Our team of innovative thinkers and skilled designers collaborate to create captivating visuals and engaging experiences. 
+                Whether it's branding, web design, or digital marketing, we bring your vision to life with precision and creativity. 
+                Let us help you stand out and leave a lasting impression in a world full of possibilities.
+            </p>
+            
             <a href="#portfolio" class="cta-button">View Our Work</a>
         </div>
     </section>
@@ -38,8 +44,14 @@
             <div class="service">
                 <img src="assets/web.jpg" alt="LOGO" class="service-logo">
                 <h3>Web Design</h3>
-                <p>We create beautiful, responsive websites that bring your brand to life.</p>
-            </div>
+                <p>
+                    We create beautiful, responsive websites that bring your brand to life.
+                    Our designs are tailored to engage your audience and drive results.<br>
+                    By blending creativity with functionality, we ensure your website not only looks stunning but also performs seamlessly.<br>
+                    Whether you're a startup or an established business, we help you establish a strong online presence.<br>
+                    Let us turn your vision into a digital experience that stands out and delivers impact.
+                </p>
+                            </div>
             <div class="service">
                 <img src="assets/graphic.jpeg" alt="LOGO" class="service-logo">
                 <h3>Graphic Design</h3>
