Add content to services section

--- a/creativemind.html
+++ b/creativemind.html
@@ -55,13 +55,25 @@
             <div class="service">
                 <img src="assets/graphic.jpeg" alt="LOGO" class="service-logo">
                 <h3>Graphic Design</h3>
-                <p>From logos to brand identity, we deliver impactful graphic design solutions.</p>
-            </div>
+                <p>
+                    From logos to brand identity, we deliver impactful graphic design solutions.
+                    Our team of talented designers works closely with you to understand your vision and goals.<br>
+                    We craft visually stunning graphics that resonate with your target audience and effectively communicate your brand message.<br>
+                    Whether you need marketing materials, packaging design, or social media graphics, we ensure consistency across all platforms.<br>
+                    Let us help you build a cohesive brand that leaves a lasting impression and drives engagement.
+                </p>
+                            </div>
             <div class="service">
                 <img src="assets/uiux.jpg" alt="LOGO" class="service-logo">
                 <h3>UI/UX Design</h3>
-                <p>User-focused design that provides an exceptional digital experience.</p>
-            </div>
+                <p>
+                    User-focused design that provides an exceptional digital experience.
+                    We prioritize usability and accessibility, ensuring every user can navigate your site with ease.<br>
+                    Our designs are informed by user research and testing, leading to intuitive interfaces that enhance engagement.<br>
+                    We believe that a seamless digital experience not only attracts users but also retains them, fostering brand loyalty.<br>
+                    Let us create a digital environment that meets the needs of your audience and drives success.
+                </p>
+                            </div>
         </div>
     </section>
 
