--- a/Assignment-01/creativemind.html
+++ b/Assignment-01/creativemind.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Creative Minds - A design agency crafting digital experiences.">
     <title>Creative Minds - Design Agency</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="stylesheet" href="styles.css">
-	
+
 </head>
+
 <body>
     <header>
         <nav>
@@ -30,12 +32,14 @@
         <div class="hero-content">
             <h1>Crafting Digital Experiences</h1>
             <p>
-                We are Creative Minds, a design agency that turns your ideas into reality. 
-                Our team of innovative thinkers and skilled designers collaborate to create captivating visuals and engaging experiences. 
-                Whether it's branding, web design, or digital marketing, we bring your vision to life with precision and creativity. 
+                We are Creative Minds, a design agency that turns your ideas into reality.
+                Our team of innovative thinkers and skilled designers collaborate to create captivating visuals and
+                engaging experiences.
+                Whether it's branding, web design, or digital marketing, we bring your vision to life with precision and
+                creativity.
                 Let us help you stand out and leave a lasting impression in a world full of possibilities.
             </p>
-            
+
             <a href="#portfolio" class="cta-button">View Our Work</a>
         </div>
     </section>
@@ -43,94 +47,101 @@
     <section id="services">
         <h2>Our Services</h2>
         <div class="service-list">
-            
+
             <div class="service">
                 <img src="assets/web.jpg" alt="LOGO" class="service-logo">
                 <h3>Web Design</h3>
                 <p>
                     We create beautiful, responsive websites that bring your brand to life.
                     Our designs are tailored to engage your audience and drive results.<br>
-                    By blending creativity with functionality, we ensure your website not only looks stunning but also performs seamlessly.<br>
-                    Whether you're a startup or an established business, we help you establish a strong online presence.<br>
+                    By blending creativity with functionality, we ensure your website not only looks stunning but also
+                    performs seamlessly.<br>
+                    Whether you're a startup or an established business, we help you establish a strong online
+                    presence.<br>
                     Let us turn your vision into a digital experience that stands out and delivers impact.
                 </p>
-                            </div>
+            </div>
             <div class="service">
                 <img src="assets/graphic.jpeg" alt="LOGO" class="service-logo">
                 <h3>Graphic Design</h3>
                 <p>
                     From logos to brand identity, we deliver impactful graphic design solutions.
                     Our team of talented designers works closely with you to understand your vision and goals.<br>
-                    We craft visually stunning graphics that resonate with your target audience and effectively communicate your brand message.<br>
-                    Whether you need marketing materials, packaging design, or social media graphics, we ensure consistency across all platforms.<br>
+                    We craft visually stunning graphics that resonate with your target audience and effectively
+                    communicate your brand message.<br>
+                    Whether you need marketing materials, packaging design, or social media graphics, we ensure
+                    consistency across all platforms.<br>
                     Let us help you build a cohesive brand that leaves a lasting impression and drives engagement.
                 </p>
-                            </div>
+            </div>
             <div class="service">
                 <img src="assets/uiux.jpg" alt="LOGO" class="service-logo">
                 <h3>UI/UX Design</h3>
                 <p>
                     User-focused design that provides an exceptional digital experience.
                     We prioritize usability and accessibility, ensuring every user can navigate your site with ease.<br>
-                    Our designs are informed by user research and testing, leading to intuitive interfaces that enhance engagement.<br>
-                    We believe that a seamless digital experience not only attracts users but also retains them, fostering brand loyalty.<br>
+                    Our designs are informed by user research and testing, leading to intuitive interfaces that enhance
+                    engagement.<br>
+                    We believe that a seamless digital experience not only attracts users but also retains them,
+                    fostering brand loyalty.<br>
                     Let us create a digital environment that meets the needs of your audience and drives success.
                 </p>
-                            </div>
+            </div>
         </div>
     </section>
 
 
-<section id="team">
-    <h2>Meet the Team</h2>
-    <div class="team-grid">
-        <div class="team-member">
-            <img src="assets/ahmad.jpg" alt="Ahmed Khan">
-            <h3>Ahmed Khan</h3>
-            <p>Creative Director</p>
+    <section id="team">
+        <h2>Meet the Team</h2>
+        <div class="team-grid">
+            <div class="team-member">
+                <img src="assets/ahmad.jpg" alt="Ahmed Khan">
+                <h3>Ahmed Khan</h3>
+                <p>Creative Director</p>
+            </div>
+            <div class="team-member">
+                <img src="assets/sara.jpg" alt="Sara Ali">
+                <h3>Sara Ali</h3>
+                <p>UX/UI Designer</p>
+            </div>
+            <div class="team-member">
+                <img src="assets/bilal.jpg" alt="Bilal Hussain">
+                <h3>Bilal Hussain</h3>
+                <p>Web Developer</p>
+            </div>
+            <div class="team-member">
+                <img src="assets/zara.jpg" alt="Zara Sheikh">
+                <h3>Zara Sheikh</h3>
+                <p>Marketing Strategist</p>
+            </div>
         </div>
-        <div class="team-member">
-            <img src="assets/sara.jpg" alt="Sara Ali">
-            <h3>Sara Ali</h3>
-            <p>UX/UI Designer</p>
-        </div>
-        <div class="team-member">
-            <img src="assets/bilal.jpg" alt="Bilal Hussain">
-            <h3>Bilal Hussain</h3>
-            <p>Web Developer</p>
-        </div>
-        <div class="team-member">
-            <img src="assets/zara.jpg" alt="Zara Sheikh">
-            <h3>Zara Sheikh</h3>
-            <p>Marketing Strategist</p>
-        </div>
-    </div>
-</section>
+    </section>
 
 
 
-   <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Have a project in mind? Let's collaborate!</p>
-    <form action="#" method="post">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-    </form>
-</section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Have a project in mind? Let's collaborate!</p>
+        <form action="#" method="post">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
 
 
-   <footer>
+    <footer>
         <div class="footer-content">
             <p>&copy; 2024 Creative Minds. All rights reserved.</p>
             <ul class="socials">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li> <!-- Facebook -->
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>    <!-- Twitter -->
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>  <!-- Instagram -->
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li> <!-- Twitter -->
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li> <!-- Instagram -->
                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li> <!-- LinkedIn -->
             </ul>
         </div>
     </footer>
 </body>
+
 </html>
